# divisible

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: print_values.h  test_to.h
inc/divisors/: divisible.h
lib/: CMakeLists.txt
lib/divisors/: CMakeLists.txt  divisible.c
src/: CMakeLists.txt  print_values.c  test_to.c
src/divisors/: CMakeLists.txt  divisible.c
